# little_medical_reader

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  test_nlp_pipeline.py
.github/: copilot-instructions.md
NLP/: advanced_nlp.py  basic_nlp.py
NLP/V2/: nlp.py
UI/: main.py
V2/: main.py
agents/: V2_summary_agent.py  concepts_agent.py  summary_agent.py
file_processor/: advanced_pdf_processor.py  pdf_processor.py
nlp_output/: analysis_summary.txt  meaningful_words.csv  nlp_analysis_results.json
