[project]
name = "lmr"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "docling>=2.41.0",
    "google-genai>=1.25.0",
    "matplotlib>=3.10.3",
    "nltk>=3.9.1",
    "pdfplumber>=0.11.7",
    "pymupdf>=1.26.3",
    "python-dotenv>=1.1.1",
    "streamlit>=1.46.1",
    "wordcloud>=1.9.4",
]
