[project]
name = "lmr"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "docling>=2.41.0",
    "google-genai>=1.25.0",
    "markdown>=3.8.2",
    "matplotlib>=3.10.3",
    "networkx>=3.5",
    "nltk>=3.9.1",
    "numpy==1.26.4",
    "pdfplumber>=0.11.7",
    "plotly>=6.2.0",
    "pymupdf>=1.26.3",
    "python-dotenv>=1.1.1",
    "pyvis>=0.3.2",
    "scikit-learn>=1.7.0",
    "scispacy>=0.5.5",
    "seaborn>=0.13.2",
    "spacy>=3.7.5",
    "streamlit>=1.46.1",
    "wordcloud>=1.9.4",
]
